[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hermes-scp"
version = "1.1.0"
description = "SCP: Session Context Pre-fill for Hermes Agent — zero-effort context continuity across sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "kriszmac4", email = "kriszmac4@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/kriszmac4/scp"
Repository = "https://github.com/kriszmac4/scp.git"

[project.scripts]
hermes-scp = "scp:main"
